Update readme for Java 9